# databricks-llm-fine-tuning-demo

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  azure-pipelines-pr.yml  databricks.yml  environment.yml  fine_tuning_test.ipynb  mkdocs.yml  pyproject.toml  requirements.txt  setup-ci.py
.github/workflows/: cicd.yml
docs/: code_documentation.md
old_requirements_files/: azure-pipelines.yml  requirements.txt  setup.py
resources/: job.yml
src/databricks_llm_fine_tuning_demo/classical_ml/data_pipeline/: task1.py  task2.py
src/databricks_llm_fine_tuning_demo/classical_ml/model/: evaluate.py  train.py
src/databricks_llm_fine_tuning_demo/data_pipeline/: data_loader.py
src/databricks_llm_fine_tuning_demo/llm_fine_tuning/: data_loader.py  data_loader2.py  inference.py  train.py
src/databricks_llm_fine_tuning_demo/llm_fine_tuning/notebooks/: FT_yelp_dataset.ipynb
src/databricks_llm_fine_tuning_demo/llm_fine_tuning_yelp/: config.yaml
src/databricks_llm_fine_tuning_demo/model/: inference.py  train.py
src/databricks_llm_fine_tuning_demo/notebooks/: dialoguesum_test.ipynb
