[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120
disable = 'C0114, C0115, C0116'
[project]
name = "databricks-llm-fine-tuning-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "pdemeulenaer",email = "pdemeulenaer@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "accelerate == 1.3.0",
    "bitsandbytes==0.45.3",
    "scipy == 1.13.1",
    "datasets",
    "transformers == 4.48.2",
    "trl == 0.14.0",
    "tqdm == 4.66.4",
    "torch == 2.2.2",
    "torchinfo == 1.8.0",
    "torchmetrics == 0.8.2",
    "torchsummary == 1.5.1",
    "torchvision == 0.17.2",
    "tokenizers == 0.21.0",
    "sentence-transformers == 2.7.0",
    "peft == 0.7.1",
    "huggingface-hub == 0.28.1",
    "fsspec == 2024.10.0",
    "einops == 0.8.1",
    "evaluate == 0.4.3",
    "pynvml == 12.0.0",
    "rouge_score == 0.1.2",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry.scripts]
data_extraction="databricks_llm_fine_tuning_demo.data_pipeline.task1:main"
data_visualization="databricks_llm_fine_tuning_demo.data_pipeline.task2:main"
training="databricks_llm_fine_tuning_demo.model.train:main"
evaluation="databricks_llm_fine_tuning_demo.model.evaluate:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^25.1.0"
ruff = "^0.9.6"
mypy = "^1.15.0"
pre-commit = "^4.1.0"
bandit = { version = "^1.7.6", extras = ["toml"] }
pytest-mock = "^3.14.0"
pytest-cov = "^6.0.0"
isort = "^6.0.0"
nbstripout = "^0.8.1"
behave = "^1.2.6"
mkdocs = "^1.6.1"
mkdocstrings = {extras = ["python"], version = "^0.28.0"}
mkdocs-print-site-plugin = "^2.6.0"
mkdocs-with-pdf = "^0.9.3"
mkdocs-same-dir = "^0.1.3"
databricks-connect = "^16.1.0"
numpy = ">=1.15,<2" # numpy before version 2 is required for databricks-connect 16.1.0
pandas = ">=2.2.3,<3.0.0"
scikit-learn = ">=1.6.1,<2.0.0"
matplotlib = ">=3.10.0,<4.0.0"
mlflow = "==2.15.1"
python-dotenv = ">=1.0.1,<2.0.0"
gradio = ">=5.16.0,<6.0.0"
ipykernel = "^6.29.5"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
python_files = "test_*.py *_test.py Test*.py *Test.py"
python_classes = "*Test Test"
markers = ["spark"]

[tool.mypy]
plugins = "pydantic.mypy"
disallow_untyped_calls = "true"
disallow_untyped_defs = "true"
disallow_incomplete_defs = "true"
check_untyped_defs = "true"
no_implicit_optional = "true"
warn_redundant_casts = "true"
ignore_missing_imports = "true"

[tool.ruff]
exclude = [
    "*/notebooks/*",
]
